--- a/app.wxss
+++ b/app.wxss
@@ -39,11 +39,12 @@ margin:10rpx;
 .share-content{
   width: 600rpx;
 }
-.all image {
+image {
 width:100%;
 height:100%;
+display:inline-block;
+overflow:hidden;
 
- flex-direction: column;
 }
 .price_cont{
   display: flex;
