--- a/storage/pages/zcDetail/zcDetail.wxml
+++ b/storage/pages/zcDetail/zcDetail.wxml
@@ -95,13 +95,13 @@
                 duration="{{500}}"
                 bindchange="swiperTabBd">
                 <swiper-item>
-                    <template is="wxParse" data="{{wxParseData:proDom.nodes}}"/>
+                    <!-- <template is="wxParse" data="{{wxParseData:proDom.nodes}}"/> -->
                 </swiper-item>
                 <swiper-item>
-                    <template is="wxParse" data="{{wxParseData:teamDom.nodes}}"/>
+                    <!-- <template is="wxParse" data="{{wxParseData:teamDom.nodes}}"/> -->
                 </swiper-item>
                 <swiper-item>
-                    <template is="wxParse" data="{{wxParseData:textDom.nodes}}"/>
+                    <!-- <template is="wxParse" data="{{wxParseData:textDom.nodes}}"/> -->
                 </swiper-item>
                 <swiper-item>
                     <view class="tk">
